; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_cgroup-util.c_cg_read_pid.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_cgroup-util.c_cg_read_pid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [4 x i8] c"%lu\00", align 1
@EIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cg_read_pid(i64* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  store i64* %0, i64** %4, align 8
  store i64* %1, i64** %5, align 8
  %7 = load i64*, i64** %4, align 8
  %8 = call i32 @assert(i64* %7)
  %9 = load i64*, i64** %5, align 8
  %10 = call i32 @assert(i64* %9)
  store i64 0, i64* @errno, align 8
  %11 = load i64*, i64** %4, align 8
  %12 = call i32 @fscanf(i64* %11, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i64* %6)
  %13 = icmp ne i32 %12, 1
  br i1 %13, label %14, label %22

14:                                               ; preds = %2
  %15 = load i64*, i64** %4, align 8
  %16 = call i64 @feof(i64* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  store i32 0, i32* %3, align 4
  br label %31

19:                                               ; preds = %14
  %20 = load i32, i32* @EIO, align 4
  %21 = call i32 @errno_or_else(i32 %20)
  store i32 %21, i32* %3, align 4
  br label %31

22:                                               ; preds = %2
  %23 = load i64, i64* %6, align 8
  %24 = icmp ule i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %22
  %26 = load i32, i32* @EIO, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %3, align 4
  br label %31

28:                                               ; preds = %22
  %29 = load i64, i64* %6, align 8
  %30 = load i64*, i64** %5, align 8
  store i64 %29, i64* %30, align 8
  store i32 1, i32* %3, align 4
  br label %31

31:                                               ; preds = %28, %25, %19, %18
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @assert(i64*) #1

declare dso_local i32 @fscanf(i64*, i8*, i64*) #1

declare dso_local i64 @feof(i64*) #1

declare dso_local i32 @errno_or_else(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
